syntax = "proto3";

service GrpcUserService {
    rpc UserExisting (UserIdRequest) returns (UserExistingResponse);
}

message UserIdRequest {
    string id = 1;
}

message UserExistingResponse {
    bool success = 1;
}